--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 <body>
   <h1>Sugira uma melhoria para o relatório</h1>
   <a class="button-mailto"
-     href="mailto:Paulo.nascimento@qualificarti.com.br;victorms@sebraesp.com.br?subject=Relat%C3%B3rio%20Painel%20de%20Renda%20-%20Melhorias%20Powerbi&body=Ol%C3%A1,%0D%0A%0D%0AGostaria%20de%20sugerir%20a%20seguinte%20melhoria%20para%20o%20relat%C3%B3rio:%0D%0A%0D%0ADescri%C3%A7%C3%A3o%20da%20melhoria:%20_____________________%0D%0AImpacto%20esperado:%20_____________________%0D%0AOutras%20observa%C3%A7%C3%B5es:%20_____________________%0D%0A%0D%0AObrigado!"
+     href="mailto:suportebi@sebraesp.onmicrosoft.com?subject=Relat%C3%B3rio%20Painel%20de%20Renda%20-%20Melhorias%20Powerbi&body=Ol%C3%A1,%0D%0A%0D%0AGostaria%20de%20sugerir%20a%20seguinte%20melhoria%20para%20o%20relat%C3%B3rio:%0D%0A%0D%0ADescri%C3%A7%C3%A3o%20da%20melhoria:%20_____________________%0D%0AImpacto%20esperado:%20_____________________%0D%0AOutras%20observa%C3%A7%C3%B5es:%20_____________________%0D%0A%0D%0AObrigado!"
      target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v1.8L12 13 2 7.8V6c0-1.1.9-2 2-2zm0 4.25l7.5 4.5L19 8.25V18H5V8.25z"/></svg>
     Enviar Sugestão por E-mail
   </a>
 </body>
 </html>
+
